# src/main/java/com/michael/exercise/controllers/StudentController.java
@@ -8,11 +8,15 @@ import org.springframework.web.bind.annotation.RestController;
 
 import com.michael.exercise.dtos.ScheduleClassRequest;
 import com.michael.exercise.dtos.ScheduledClassResponse;
+import com.michael.exercise.dtos.StudentPointsRecordsResponse;
+import com.michael.exercise.dtos.StudentPointsResponse;
 import com.michael.exercise.dtos.TeacherAvailabilityResponse;
 import com.michael.exercise.dtos.TeacherForStudentResponse;
 import com.michael.exercise.mappers.StudentMapper;
+import com.michael.exercise.mappers.StudentPointMapper;
 import com.michael.exercise.mappers.TeacherMapper;
 import com.michael.exercise.models.ScheduledClassWithName;
+import com.michael.exercise.models.StudentPointsRecord;
 import com.michael.exercise.models.TeacherAvailability;
 import com.michael.exercise.models.TeacherIdAndName;
 import com.michael.exercise.security.SecurityUtil;
@@ -27,6 +31,7 @@ public class StudentController implements StudentApi {
     private final StudentService studentService;
     private final TeacherMapper teacherMapper;
     private final StudentMapper studentMapper;
+    private final StudentPointMapper studentPointMapper;
 
     @Override
     public ResponseEntity<List<TeacherForStudentResponse>> listTeachersForStudent() {
@@ -68,9 +73,30 @@ public class StudentController implements StudentApi {
     @Override
     public ResponseEntity<Void> cancelClass(Integer scheduleId) {
         int studentId = SecurityUtil.getUserId();
-        studentService.cancelClass(studentId, scheduleId);
+        ScheduledClassWithName scheduledClassWithName = studentService.getScheduledClass(scheduleId);
+        studentService.cancelClass(studentId, scheduledClassWithName);
         return ResponseEntity
                 .noContent()
                 .build();
+    }
+
+    @Override
+    public ResponseEntity<StudentPointsResponse> getStudentPoints() {
+        int studentId = SecurityUtil.getUserId();
+        int points = studentService.getStudentPoints(studentId);
+        StudentPointsResponse response = studentPointMapper.toStudentPointsResponse(points);
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(response);
+    }
+
+    @Override
+    public ResponseEntity<StudentPointsRecordsResponse> listStudentPointsRecords() {
+        int studentId = SecurityUtil.getUserId();
+        List<StudentPointsRecord> studentPointsRecords = studentService.listStudentPointsRecords(studentId);
+        StudentPointsRecordsResponse response = studentPointMapper.toStudentPointsRecordsResponse(studentPointsRecords);
+        return ResponseEntity
+                .status(HttpStatus.OK)
+                .body(response);
     }
 }
