# src/main/java/com/michael/exercise/models/StudentPointsRecord.java
@@ -1,0 +1,12 @@
+package com.michael.exercise.models;
+
+import lombok.Data;
+
+@Data
+public class StudentPointsRecord {
+    private int id;
+    private int studentId;
+    private int adjustedPoints;
+    private String reason;
+    private int pointsAfterAdjustment;
+}
